unpackaged/main/default/objects/Branch_Sync_Field__mdt/Branch_Sync_Field__mdt.object-meta.xml
<CustomObject>
    <description>Each record names one custom field (same API name on Advisor_Group__c and Opportunity) that BranchOpportunitySyncService mirrors between a Branch and its Primary Branch Opportunity while the Opp is open. Admins can add/remove synced fields here without changing code.</description>
    <label>Branch Sync Field</label>
    <pluralLabel>Branch Sync Fields</pluralLabel>
</CustomObject>