unpackaged/main/default/objects/Branch_Sync_Field__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this field is excluded from the Branch/Opportunity sync without deleting the record.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>