unpackaged/main/default/objects/Branch_Sync_Field__mdt/fields/Advisor_Group_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Group_Field_API_Name__c</fullName>
    <description>API name of the field on Advisor_Group__c. Paired with Opportunity Field API Name — the two need not match. Invalid or non-writeable entries are ignored at runtime.</description>
    <label>Advisor Group Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>