unpackaged/main/default/objects/Branch_Sync_Field__mdt/fields/Opportunity_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Field_API_Name__c</fullName>
    <description>API name of the field on Opportunity. Paired with Advisor Group Field API Name — the two need not match (e.g. Lead_Source__c on the Branch maps to standard LeadSource). Invalid or non-writeable entries are ignored at runtime.</description>
    <label>Opportunity Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>